[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aingle-sdk"
version = "0.1.0"
description = "AIngle SDK for Python - Data science, scripts, backend"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.9"
authors = [
    { name = "Apilium Technologies", email = "hello@apilium.com" }
]
keywords = ["aingle", "distributed", "dag", "iot", "blockchain", "p2p", "sdk"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Distributed Computing",
]
dependencies = [
    "httpx>=0.27.0",
    "websockets>=12.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.0",
    "mypy>=1.8",
    "ruff>=0.3",
    "black>=24.0",
]

[project.urls]
Homepage = "https://apilium.com"
Documentation = "https://docs.apilium.com"
Repository = "https://github.com/ApiliumCode/aingle-sdk-python"
Issues = "https://github.com/ApiliumCode/aingle-sdk-python/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/aingle_sdk"]

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.9"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
